--- a/algar/src/components/Main/Main.css
+++ b/algar/src/components/Main/Main.css
@@ -1,10 +1,8 @@
 
 
 .containerMain {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-height: 100px; 
-  }
+  display: flex;
+   }
 
 
 
