--- a/algar/src/components/About/About.css
+++ b/algar/src/components/About/About.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
+
 .container {
   width: 1200px;
   height: 1700px;
@@ -6,9 +14,7 @@
   background: rgba(135, 135, 135, 0.13);
   box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 0.25);
   margin: 5rem auto;
-  
 }
-
 
 .content {
   width: 857px;
@@ -16,8 +22,6 @@
   border-radius: 38px;
   background: #FFF;
   margin: 3rem auto;
-  
-
 }
 
 .contentLogo {
@@ -32,16 +36,15 @@
 }
 
 .text {
-   margin: 1rem auto;
+  margin: 1rem auto;
   width: 800px;
 }
 
 .text p {
   color: #000;
   font-family: Inria Sans;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 300;
-
 }
 
 .span {
@@ -57,16 +60,11 @@
   background: rgba(135, 135, 135, 0.13);
   margin: 4rem auto;
   padding: 1rem;
-
-
 }
-
-
 
 .devPerfil {
   display: flex;
   padding-left: 1rem;
-
 }
 
 .devContent {
@@ -80,7 +78,40 @@
 }
 
 .agilidade p {
-
   font-size: 13px;
+}
 
+/* Adicionando media queries para ajustar estilos em telas menores */
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .text {
+    width: 100%;
+  }
+
+  .dev {
+    width: 100%;
+  }
+
+  .agilidade {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    margin: 2rem auto;
+  }
+
+  .content,
+  .dev,
+  .agilidade {
+    margin: 2rem auto;
+  }
 }
